# alertabot

./: Dockerfile  README.md  pyproject.toml
docs/: deploy.md
helm/: Chart.yaml  values.yaml
helm/templates/: config.yaml  env.yaml  route.yaml  webapi.yaml
src/: main.py
tests/: test_wh_dispatcher.py
