[tool.poetry]
name = "wh-dispatcher"
version = "0.1.0"
description = ""
authors = ["Antonio Vivace <avivace4@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
